src/objects/FourPlanning_Reto__c.object
<CustomObject>
    <fields>
        <fullName>CategoriaRetoGestion__c</fullName>
        <label>CategoriaRetoGestion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cierre de oportunidades en curso</fullName>
                </value>
                <value>
                    <fullName>Crecimiento en el cliente</fullName>
                </value>
                <value>
                    <fullName>Implantación y Despliegue de proyectos</fullName>
                </value>
                <value>
                    <fullName>Mejorar conocimiento del cliente</fullName>
                </value>
                <value>
                    <fullName>Mejorar relacionamiento</fullName>
                </value>
                <value>
                    <fullName>Reducción de costes</fullName>
                </value>
                <value>
                    <fullName>Resolver problemas de facturación</fullName>
                </value>
                <value>
                    <fullName>Ser partners tecnológicos</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competidor__c</fullName>
        <label>Competidor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contactos_del_Cliente__c</fullName>
        <label>Contactos del Cliente</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Director de RRHH</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Director de Compras</fullName>
                </value>
                <value>
                    <fullName>Director de Negocio</fullName>
                </value>
                <value>
                    <fullName>CISO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_de_la_solucion__c</fullName>
        <label>No se usa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disponible</fullName>
                </value>
                <value>
                    <fullName>En Desarrollo</fullName>
                </value>
                <value>
                    <fullName>No Disponible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etapa_del_Reto__c</fullName>
        <label>Etapa del Reto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospección</fullName>
                </value>
                <value>
                    <fullName>Diseño</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Compras</fullName>
                </value>
                <value>
                    <fullName>Implementación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_Compromiso__c</fullName>
        <label>Fecha Compromiso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_ayuda_ventas__c</fullName>
        <label>Fecha ayuda ventas</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FourPlanning_Area__c</fullName>
        <label>FourPlanning Area</label>
        <referenceTo>FourPlanning_Area__c</referenceTo>
        <relationshipLabel>FourPlanning Retos</relationshipLabel>
        <relationshipName>FourPlanning_Retos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nivel_de_relaci_n_contacto__c</fullName>
        <label>Nivel de relación contacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buena</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Mala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_del_Reto__c</fullName>
        <label>Nombre del Reto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nota__c</fullName>
        <label>Comentarios</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observacion_solucion_elejida__c</fullName>
        <label>Observacion solucion elejida</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Otro_Contacto__c</fullName>
        <label>Otro Contacto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otros_contactos_del_cliente__c</fullName>
        <label>Otros contactos del cliente</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pidio_ayuda_a_ventas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pidio ayuda a ventas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Productos_a_Desarrollar_Vender__c</fullName>
        <label>No se usa</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conectividad</fullName>
                </value>
                <value>
                    <fullName>Movilidad</fullName>
                </value>
                <value>
                    <fullName>Virtualización y Computación en modo Opex</fullName>
                </value>
                <value>
                    <fullName>Internet de las Cosas/Control de Objetos</fullName>
                </value>
                <value>
                    <fullName>Omnicanalidad</fullName>
                </value>
                <value>
                    <fullName>Digital WorkPlace (Puesto de Trabajo Digital)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Reto__c</fullName>
        <label>Tipo de Reto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negocio</fullName>
                </value>
                <value>
                    <fullName>Gestión</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Competidor__c</fullName>
        <label>Web Competidor</label>
        <type>Url</type>
    </fields>
    <label>FourPlanning Reto</label>
    <nameField>
        <label>Nombre de FourPlanning Reto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FourPlanning Retos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>